[project]
name = "ok-serial-pubsub-relay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dan Egnor", email = "egnor@ofb.net" }]
requires-python = ">=3.9"
dependencies = [
    "anycrc>=1.3.6",
    "msgspec>=0.20.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy", "pytest", "ruff"]

[project.scripts]
okrelay = "ok_serial_pubsub_relay.okrelay_cli:main"

[tool.mypy]
exclude_gitignore = true
files = "."

[tool.uv.build-backend]
module-root = ""
